# personalized-outfit-recommendation

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
datasets/: README.md
scripts/: _bootstrap.py  build_eval_sets.py  build_graph.py  evaluate.py  prepare_data.py  train_baseline.py  train_baselines.py  train_embeddings.py  train_fom.py  train_pog.py
src/alibaba_ifashion_graph_recsys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/graph_recsys/: __init__.py
src/graph_recsys/data/: canonicalize.py  prepare.py  splits.py
src/graph_recsys/embeddings/: train.py
src/graph_recsys/evaluation/: build_sets.py  metrics.py
src/graph_recsys/graph/: build.py
src/graph_recsys/inference/: recommend.py
src/graph_recsys/models/: baselines.py  fom.py  gnn.py  pog_proxy.py
src/graph_recsys/training/: tf_stack.py  train.py
src/graph_recsys/utils/: config.py  io.py  random.py
tests/: test_fom_pog_units.py  test_pipeline_smoke.py  test_recommend.py
